FIX: ElementIcon spacing in modaladmin

--- a/css/elemental-admin.css
+++ b/css/elemental-admin.css
@@ -34,10 +34,14 @@
 
 
 .col-ElementIcon {
+    max-width: 30px;
+    text-align: center;
+}
+
+.col-reorder + .col-ElementIcon {
     width: 1px;
     max-width: 20px;
-    padding-left: 0 !important;
-    padding-right: 0 !important;
+    padding-left: 0px !important
 }
 
 th.col-ElementIcon {
